syntax = "proto3";

package app.v1;

import "google/protobuf/timestamp.proto";

// Chat message model
message ChatMessage {
  string id = 1;
  string user_id = 2;
  string username = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

// User joins chat room
message JoinChatRequest {
  string room_id = 1;
  string user_id = 2;
  string username = 3;
}

// Response when user joins
message JoinChatResponse {
  bool success = 1;
  string message = 2;
}

// Send message request
message SendMessageRequest {
  string room_id = 1;
  string user_id = 2;
  string username = 3;
  string content = 4;
}

// Send message response
message SendMessageResponse {
  bool success = 1;
  string message_id = 2;
}

// Stream chat messages request
message StreamChatRequest {
  string room_id = 1;
  string user_id = 2;
}

// Chat event types
enum ChatEventType {
  MESSAGE = 0;
  USER_JOINED = 1;
  USER_LEFT = 2;
}

// Chat event for streaming
message ChatEvent {
  ChatEventType type = 1;
  ChatMessage message = 2;
  string user_id = 3;
  string username = 4;
  google.protobuf.Timestamp timestamp = 5;
}